Fix blurred on Chrome

--- a/src/App.css
+++ b/src/App.css
@@ -94,14 +94,13 @@
 .emblem-image-container {
   flex: 1;
   position: relative;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .emblem-image {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   max-width: calc(100% - 30px);
   max-height: calc(100% - 30px);
 }
